syntax = "proto3";

package releases;

service GoReleases {
    rpc GetReleaseInfo (GetReleaseInfoRequest) returns (ReleaseInfo) {}
    rpc ListReleases (ListReleasesRequest) returns (ListReleasesResponse) {}
}

message GetReleaseInfoRequest {
    string version = 1;
}

message ReleaseInfo {
    string version = 1;
    string release_date = 2;
    string release_notes_url = 3;
}

message ListReleasesRequest {}

message ListReleasesResponse {
    repeated ReleaseInfo releases = 1;
}